# paper-summarizer

./: .gitignore  Readme.md  pyproject.toml
src/: summarizer.ipynb
