[tool.poetry]
name = "paper-summarizer"
version = "0.1.0"
description = ""
authors = ["tonmoy"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
transformers = "^4.33.2"
ipykernel = "^6.25.2"
torch = "^2.0.1"
torchaudio = "^2.0.2"
torchvision = "^0.15.2"
tensorflow = "^2.13.0"
tqdm = "^4.66.1"
pymupdf = "^1.23.3"
iprogress = "^0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
